# system_f_omega

./: .gitignore  dune-project  licence  readme.md  system_f_omega.opam
.devcontainer/: Dockerfile  devcontainer.json
lib/: CEK.ml  Check.ml  Kind.ml  Term.ml  Type.ml  dune
test/: dune  run_tests.ml
